--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BOT_TOKEN='6821103467:AAFY2g85PPXQGv0_aXEQBiVW8TUre_evV_s'
+BOT_TOKEN=6821103467:AAE9EDp9jEcwGF1PGobv7S74TEefhxUwrio
 ADMINS=557407324
